--- a/css/positioning/hatstyle.css
+++ b/css/positioning/hatstyle.css
@@ -1,3 +1,14 @@
 img.octopus {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+}
 
+img.glasses	{
+	position: absolute;
+}
+
+img.hat	{
+	position: absolute;
 }
