--- a/css/positioning/hatstyle.css
+++ b/css/positioning/hatstyle.css
@@ -1,12 +1,14 @@
-img.octopus {
-	display: block;
+img.octopi	{
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 100px;
+	display: block;
+	position: relative
 }
 
-img.glasses	{
+img.spectacles	{
 	position: absolute;
+	display: block;
+	margin-left: 500px;
 }
 
 img.hat	{
