Change order in which pictures appear

--- a/css/positioning/hatstyle.css
+++ b/css/positioning/hatstyle.css
@@ -1,16 +1,4 @@
-img.octopi	{
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-	position: relative
+.relative {
+	position: relative;
 }
 
-img.spectacles	{
-	position: absolute;
-	display: block;
-	margin-left: 500px;
-}
-
-img.hat	{
-	position: absolute;
-}
