--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -1,19 +1,19 @@
-.column-1 {
+.column-1, .column-2 {
   display: inline-block;
-  width: 48%;
+  width: 47%;
   vertical-align: top;
   padding-left: 5px;
   background-color: #C7CB85;
   box-shadow: 3px 3px 5px grey;
 }
 
+.column-1 {
+  margin-left: 10px;
+}
+
 .column-2 {
-  display: inline-block;
-  width: 48%;
-  vertical-align: top;
-  padding-left: 5px;
-  background-color: #C7CB85;
-  box-shadow: 3px 3px 5px grey;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 body {
